[package]
name    = "narigama-aoc2023"
version = "0.1.0"
edition = "2021"

[profile.release]
lto   = true
strip = "symbols"

[dependencies]
dotenvy            = { version = "0.15.7" }
eyre               = { version = "0.6.9" }
itertools          = { version = "0.12.0" }
reqwest            = { version = "0.11.22", features = ["blocking", "cookies"] }
tracing            = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name    = "y2023d01"
harness = false

[[bench]]
name    = "y2023d02"
harness = false
